src/patternfly/components/MenuToggle/menu-toggle.scss
/* ... */
.#{$menu-toggle}__text {
  @include pf-v6-text-overflow;

  min-width: 0;
}

.#{$menu-toggle}__count {
  display: flex;
  flex-wrap: nowrap;
}

.#{$menu-toggle}__icon {
  flex-shrink: 0;

  &.pf-m-avatar {
    .#{$avatar},
    img,
    svg {
      margin-block-start: calc(var(--#{$menu-toggle}--PaddingBlockStart) * -1);
      margin-block-end: calc(var(--#{$menu-toggle}--PaddingBlockEnd) * -1);
    }
  }
}

// - Menu toggle controls
.#{$menu-toggle}__controls {
  display: flex;
  gap: var(--#{$menu-toggle}__controls--Gap);
  align-items: center;
  justify-content: center;
  margin-inline-start: auto; // TODO: possibly replace as part of one of the other TODOs at top of file
}

// - Menu toggle icon
.#{$menu-toggle}__toggle-icon {
  min-height: var(--#{$menu-toggle}__toggle-icon--MinHeight);
  color: var(--#{$menu-toggle}__toggle-icon--Color, inherit);
}

// - Menu toggle status icon
.#{$menu-toggle}__status-icon {
  color: var(--#{$menu-toggle}__status-icon--Color, inherit);
}

